cmake_minimum_required(VERSION 3.14)

# Project
set(PROJECT DeepSORT)
project(${PROJECT} VERSION 1.0)

# Standard
set(CMAKE_CXX_STANDARD 11)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin/debug)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin/release)

# Eigen
find_package(Eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIR})

# Current
set(CURRENT ${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CURRENT}/include)
aux_source_directory(${CURRENT}/src SRC)
add_library(${PROJECT} SHARED ${SRC})

# CPM
include(${CURRENT}/cmake/CPM.cmake)

# Test
add_subdirectory(${CURRENT}/test)
